@@ -26,7 +26,7 @@ Echoe.new('capistrano', version) do |p|
   p.need_zip         = true
   p.rdoc_pattern     = /^(lib|README.rdoc|CHANGELOG.rdoc)/
 
-  p.dependencies     = ["net-ssh         >=2.0.0",
+  p.dependencies     = ["net-ssh         >=2.0.10",
                         "net-sftp        >=2.0.0",
                         "net-scp         >=1.0.0",
                         "net-ssh-gateway >=1.0.0",
